Initial powerline supported config
 - Switch to custom agnoster theme
 - use powerline supported fonts for vim-airline
 - link custom themes for oh-my-zsh

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -40,5 +40,8 @@
     ~/.oh-my-zsh/custom/custom.zsh:
       if: "[ -d ~/.oh-my-zsh ]"
       path: zsh/custom.zsh
+    ~/.oh-my-zsh/custom/themes/agnoster.zsh-theme:
+      if: "[ -d ~/.oh-my-zsh ]"
+      path: zsh/themes/agnoster.zsh-theme
     ~/.zsh: 
 
