Change tmux-resurrect save directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -94,3 +94,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# Resurrect save directory based on hostname
+set -g @resurrect-dir '$HOME/.tmux/$HOSTNAME/resurrect'
