--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # Use screen stype prefix
 unbind C-b
 set -g prefix C-a
+bind-key a  send-prefix
 
 # bind keys for easy previous and nex window movement
 bind-key C-a last-window
