Add doxygen vim plugin with manual install

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,8 @@
     ~/.cshrc.local: 
     ~/.shell: 
     ~/.zshrc: 
+    ~/.vim/plugin: vim/plugin
+    ~/.vim/plugin/doxygen.vim: doxygen.vim
 
 - shell:
   - 
