--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,6 +20,7 @@
     ~/.zshrc: 
     ~/.vim/plugin: vim/plugin
     ~/.vim/plugin/doxygen.vim: doxygen.vim
+    ~/.global_gitignore:
 
 - shell:
   - 
