--- a/tmux.conf
+++ b/tmux.conf
@@ -61,29 +61,30 @@ setw -g monitor-activity off
 set -g bell-action none
 
 #  modes
-setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+# Comment out status line in powerline config in favor of theme
+#setw -g clock-mode-colour colour5
+#setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
-# panes
-set -g pane-border-style 'fg=colour9 bg=colour0'
-set -g pane-active-border-style 'bg=colour0 fg=colour9'
+## panes
+#set -g pane-border-style 'fg=colour9 bg=colour0'
+#set -g pane-active-border-style 'bg=colour0 fg=colour9'
 
-# statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour236 fg=colour137 dim'
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour253] %H:%M %d/%m '
-set -g status-right-length 50
-set -g status-left-length 20
+## statusbar
+#set -g status-position bottom
+#set -g status-justify left
+#set -g status-style 'bg=colour236 fg=colour137 dim'
+#set -g status-left ''
+#set -g status-right '#[fg=colour233,bg=colour253] %H:%M %d/%m '
+#set -g status-right-length 50
+#set -g status-left-length 20
 
-setw -g window-status-current-style 'fg=colour1 bg=colour210 bold'
-setw -g window-status-current-format ' #[fg=colour1]#I#[fg=colour233]:#[fg=colour233]#W '
+#setw -g window-status-current-style 'fg=colour1 bg=colour210 bold'
+#setw -g window-status-current-format ' #[fg=colour1]#I#[fg=colour233]:#[fg=colour233]#W '
 
-setw -g window-status-style 'fg=colour9'
-setw -g window-status-format ' #[fg=colour123]#I#[fg=colour255]:#[fg=colour250]#W#[fg=colour244]#F '
+#setw -g window-status-style 'fg=colour9'
+#setw -g window-status-format ' #[fg=colour123]#I#[fg=colour255]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+#setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
 set -g message-style 'fg=colour9 bg=colour236 bold'
@@ -93,6 +94,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme '#fff700'
+set -g @tmux_power_date_icon ' '
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
