Change theme for tmux and add calender icon

--- a/tmux.conf
+++ b/tmux.conf
@@ -87,7 +87,7 @@ set -g bell-action none
 #setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
-set -g message-style 'fg=colour9 bg=colour236 bold'
+#set -g message-style 'fg=colour9 bg=colour236 bold'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -95,8 +95,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme '#fff700'
-set -g @tmux_power_date_icon ' '
+set -g @tmux_power_theme 'snow'
+set -g @tmux_power_date_icon ''
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
