Tmux config changes to fix icons

--- a/tmux.conf
+++ b/tmux.conf
@@ -95,8 +95,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'snow'
+set -g @tmux_power_theme 'coral'
 set -g @tmux_power_date_icon ''
+set -g @tmux_power_time_icon ''
+set -g @tmux_power_user_icon ''
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
