--- a/tmux.conf
+++ b/tmux.conf
@@ -94,11 +94,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'coral'
-set -g @tmux_power_date_icon ''
-set -g @tmux_power_time_icon ''
-set -g @tmux_power_user_icon ''
+#set -g @plugin 'wfxr/tmux-power'
+#set -g @tmux_power_theme 'coral'
+#set -g @tmux_power_date_icon ''
+#set -g @tmux_power_time_icon ''
+#set -g @tmux_power_user_icon ''
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
