--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -27,6 +27,7 @@
     ~/.vim/ftplugin: vim/ftplugin
     ~/.vim/syntax: vim/syntax
     ~/.vim/after: vim/after
+    ~/.vim/autoload/myvim: vim/autoload/myvim
     ~/.global_gitignore:
     ~/.config/lf: config/lf
     ~/.config/nvim: config/nvim
