Add gdbinit and libcxx-pretty-printers submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "zsh/plugins/z.lua"]
 	path = zsh/plugins/z.lua
 	url = https://github.com/skywind3000/z.lua
+[submodule "gdb/libcxx-pretty-printers"]
+	path = gdb/libcxx-pretty-printers
+	url = https://github.com/koutheir/libcxx-pretty-printers
