--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -32,6 +32,8 @@
     ~/.config/lf: config/lf
     ~/.config/nvim: config/nvim
     ~/.common_mappings.vim:
+    ~/.gdbinit: 
+    ~/libcxx-pretty-printers: gdb/libcxx-pretty-printers
 
 - shell:
   - 
