--- a/tmux.conf
+++ b/tmux.conf
@@ -22,8 +22,8 @@ bind r source-file ~/.tmux.conf
 # switch panes using Alt-arrow without prefix
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
-bind -n M-j select-pane -U
-bind -n M-k select-pane -D
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
 
 # don't rename windows automatically
 set-option -g allow-rename off
