Remove tmux F5 and F6 bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,8 @@ bind-key a  send-prefix
 
 # bind keys for easy previous and nex window movement
 bind-key C-a last-window
-bind-key -n F5 previous-window
-bind-key -n F6 next-window
+# bind-key -n F5 previous-window
+# bind-key -n F6 next-window
 
 
 # split panes with | and -
