Remove Ohmyzsh and add starship prompt

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -35,6 +35,8 @@
     ~/.gdbinit: 
     ~/.gdb: gdb
     ~/.vim/coc-settings.json: config/nvim/coc-settings.json
+    ~/.custom.zsh: zsh/custom.zsh
+    ~/.config/starship.toml: config/starship.toml
 
 - shell:
   - 
