Add manpath and fish style pwd

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -4,6 +4,10 @@ add_newline = true
 [username]
 disabled = true
 
+[shell]
+disabled = false
+bash_indicator = "bash"
+
 # [custom.shell]
 # command = "echo $SHELL | xargs basename"
 # when = "echo 0"
@@ -50,6 +54,7 @@ symbol = ".NET "
 
 [directory]
 read_only = " ro"
+fish_style_pwd_dir_length = 1
 
 [docker_context]
 symbol = "docker "
@@ -119,3 +124,4 @@ symbol = "scala "
 
 [swift]
 symbol = "swift "
+
