move tvm-gdb to submodule and small changes

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -38,6 +38,7 @@
     ~/.custom.zsh: zsh/custom.zsh
     ~/.config/starship.toml: config/starship.toml
     ~/.man: 
+    ~/tvm-gdb-commands: gdb/tvm-gdb-commands
 
 - shell:
   - 
