--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,9 @@ bind -n M-l select-pane -R
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 
+# Add cht.sh bindkey
+bind -r i run-shell "tmux neww tmux-cht.sh"
+
 # don't rename windows automatically
 set-option -g allow-rename off
 
