--- a/tmux.conf
+++ b/tmux.conf
@@ -20,10 +20,60 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes using Alt-arrow without prefix
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
+# bind -n M-h select-pane -L
+# bind -n M-l select-pane -R
+# bind -n M-j select-pane -D
+# bind -n M-k select-pane -U
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'M-h' select-pane -L
+bind-key -T copy-mode-vi 'M-j' select-pane -D
+bind-key -T copy-mode-vi 'M-k' select-pane -U
+bind-key -T copy-mode-vi 'M-l' select-pane -R
+bind-key -T copy-mode-vi 'M-\' select-pane -l
+
+bind -n M-B switch-client -l
+bind -n M-b switch-client -l
+
+# Open htop in a new window
+bind-key h new-window "htop"
+
+
+
+
+# Create a new session with the name same as current directory
+bind-key C-b send-keys 'tat && exit' 'C-m'
+
+# Kill a session without leaving tmux
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
+                           sed -En "s/^tmux *([.0-9]+).*/\1/p")'
+
+# FZF based fuzzy switch session
+bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 3.2" | bc)" = 1 ]' \
+    'source ~/.tmux-3.2.conf'
+
+# bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# Prompted join-pane
+bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+
+# Easily swap a pane (targeted by pane number) with the current pane
+bind-key M-s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
 # Add cht.sh bindkey
 bind -r i run-shell "tmux neww tmux-cht.sh"
@@ -32,14 +82,20 @@ bind -r i run-shell "tmux neww tmux-cht.sh"
 set-option -g allow-rename off
 
 # Toggle mouse on
-bind-key M \
+bind-key -Tmytable1 M \
   set-option -g mouse on \;\
   display-message 'Mouse: ON'
 
 # Toggle mouse off
-bind-key m \
+bind-key -Tmytable1 m \
   set-option -g mouse off \;\
   display-message 'Mouse: OFF'
+
+# Open python or ipython in a new window
+bind-key -Tmytable1 i split-window -v "ipython"
+bind-key -Tmytable1 p split-window -v "python"
+bind-key m switch-client -Tmytable1
+
 
 set -g history-limit 100000
 
