Minor changes to vimrc and tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,9 +48,6 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 bind -n M-B switch-client -l
 bind -n M-b switch-client -l
 
-# Open htop in a new window
-bind-key h new-window "htop"
-
 
 
 
@@ -81,6 +78,8 @@ bind -r i run-shell "tmux neww tmux-cht.sh"
 # don't rename windows automatically
 set-option -g allow-rename off
 
+bind-key m switch-client -Tmytable1
+
 # Toggle mouse on
 bind-key -Tmytable1 M \
   set-option -g mouse on \;\
@@ -94,13 +93,27 @@ bind-key -Tmytable1 m \
 # Open python or ipython in a new window
 bind-key -Tmytable1 i split-window -v "ipython"
 bind-key -Tmytable1 p split-window -v "python"
-bind-key m switch-client -Tmytable1
 
+# Open htop in a new window
+bind-key -Tmytable1 h new-window "htop"
+
+bind-key C-n new-session
+bind-key -Tmytable1 C-k display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse -m --header=kill-session --preview 'tmux capture-pane -pt {}' |\
+    xargs -I {} tmux kill-session -t {}"
 
 set -g history-limit 100000
 
 #Enable vi mode for tmux settings
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection
+
+bind -N "Join pane" @ choose-window 'join-pane -h -s "%%"'
+
+bind-key -Tmytable1 s new-session -A -s "scratch"
 
 # Focus events
 set -g focus-events on
