--- a/tmux/tmux-3.2.conf
+++ b/tmux/tmux-3.2.conf
@@ -1,3 +1,7 @@
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-bind-key -Tmytable1 p display-popup -E "python"
-bind-key -Tmytable1 i display-popup "ipython"
+
+
+bind-key -Tmytable1 p display-popup -E -w 80% -h 80% "python"
+bind-key -Tmytable1 h display-popup -E -w 80% -h 80% "htop"
+bind-key -Tmytable1 s display-popup -w 80% -h 80% 'tmux new-session -A -s "scratch"'
+
