add ipython in popup

--- a/tmux/tmux-3.2.conf
+++ b/tmux/tmux-3.2.conf
@@ -2,6 +2,7 @@ bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$
 
 
 bind-key -Tmytable1 p display-popup -E -w 80% -h 80% "python"
+bind-key -Tmytable1 i display-popup -E -w 80% -h 80% "ipython"
 bind-key -Tmytable1 h display-popup -E -w 80% -h 80% "htop"
 bind-key -Tmytable1 s display-popup -w 80% -h 80% 'tmux new-session -A -s "scratch"'
 
