Move 3.2 tmux conf to separate file

--- a/tmux/tmux-3.2.conf
+++ b/tmux/tmux-3.2.conf
@@ -6,3 +6,10 @@ bind-key -Tmytable1 i display-popup -E -w 80% -h 80% "ipython"
 bind-key -Tmytable1 h display-popup -E -w 80% -h 80% "htop"
 bind-key -Tmytable1 s display-popup -w 80% -h 80% 'tmux new-session -A -s "scratch"'
 
+bind-key -Tmytable1 C-k display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse -m --header=kill-session --preview 'tmux capture-pane -pt {}' |\
+    xargs -I {} tmux kill-session -t {}"
+
+bind -N "Join pane" @ choose-window 'join-pane -h -s "%%"'
