add manpages tmux binding and other small changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -93,6 +93,7 @@ bind-key -Tmytable1 m \
 # Open python or ipython in a new window
 bind-key -Tmytable1 i split-window -v "ipython"
 bind-key -Tmytable1 p split-window -v "python"
+bind-key -Tmytable1 f new-window "~/.bin/manpages_fzf.sh"
 
 # Open htop in a new window
 bind-key -Tmytable1 h new-window "htop"
