--- a/tmux.conf
+++ b/tmux.conf
@@ -163,3 +163,4 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Resurrect save directory based on hostname
 set -g @resurrect-dir '$HOME/.tmux/$HOSTNAME/resurrect'
+unbind C-r
