Add tmux terminal-overrides for cursor shape

--- a/tmux.conf
+++ b/tmux.conf
@@ -112,6 +112,7 @@ bind-key -Tmytable1 s new-session -A -s "scratch"
 set -g focus-events on
 
 set -g default-terminal "screen-256color"
+set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 
 ######################
