Minor tmux config and zsh autosuggestion change

--- a/tmux/tmux-3.2.conf
+++ b/tmux/tmux-3.2.conf
@@ -1,4 +1,5 @@
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 
 bind-key -Tmytable1 p display-popup -E -w 80% -h 80% "python"
