--- a/tmux.conf
+++ b/tmux.conf
@@ -48,9 +48,6 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 bind -n M-B switch-client -l
 bind -n M-b switch-client -l
 
-
-
-
 # Create a new session with the name same as current directory
 bind-key C-b send-keys 'tat && exit' 'C-m'
 
@@ -62,12 +59,10 @@ run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
 
 # FZF based fuzzy switch session
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 3.2" | bc)" = 1 ]' \
-    'source ~/.tmux-3.2.conf'
+bind j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 # bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 # Prompted join-pane
-bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key M-s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
@@ -79,6 +74,7 @@ bind -r i run-shell "tmux neww tmux-cht.sh"
 set-option -g allow-rename off
 
 bind-key m switch-client -Tmytable1
+bind-key b switch-client -Tmytable2
 
 # Toggle mouse on
 bind-key -Tmytable1 M \
@@ -94,6 +90,8 @@ bind-key -Tmytable1 m \
 bind-key -Tmytable1 i split-window -v "ipython"
 bind-key -Tmytable1 p split-window -v "python"
 bind-key -Tmytable1 f new-window "~/.bin/manpages_fzf.sh"
+
+bind-key -Tmytable2 j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 # Open htop in a new window
 bind-key -Tmytable1 h new-window "htop"
@@ -113,6 +111,9 @@ set -g focus-events on
 
 set -g default-terminal "screen-256color"
 set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
+
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 3.2" | bc)" = 1 ]' \
+    'source ~/.tmux-3.2.conf'
 
 
 ######################
