small bash and zsh changes and set tmux renumber-windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,6 +72,7 @@ bind -r i run-shell "tmux neww tmux-cht.sh"
 
 # don't rename windows automatically
 set-option -g allow-rename off
+set-option -g renumber-windows on
 
 bind-key m switch-client -Tmytable1
 bind-key b switch-client -Tmytable2
