--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -14,6 +14,7 @@
       ]
     }
   },
+  "python.pythonPath": "~/.bin/coc_pyright.sh",
   "diagnostic-languageserver.filetypes": {
     "python": "pylint"
   },
