Add ipynb_checkpoints to global_gitignore

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "suggest.noselect": true,
   "suggest.labelMaxLength": 80,
+  "clangd.fallbackFlags": [ "-std=c++17" ],
   "languageserver": {
     "ffi-navigator": {
       "command": "python",
