--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -20,6 +20,7 @@
   "diagnostic-languageserver.filetypes": {
     "python": "pylint"
   },
+  "diagnostic.virtualText": false,
   "diagnostic-languageserver.linters": {
     "pylint": {
       "sourceName": "pylint",
