Add new tmux themes

--- a/tmux.conf
+++ b/tmux.conf
@@ -167,7 +167,15 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @tmux_power_time_icon ''
 #set -g @tmux_power_user_icon ''
 # set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'anirudhsundar/tmux-onedark-theme-grey'
+# set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @plugin 'egel/tmux-gruvbox'
+# set -g @tmux-gruvbox 'dark' # or 'light'
+# set -g @plugin 'o0th/tmux-nova'
+# set -g @nova-nerdfonts false
+# set -g @plugin 'fabioluciano/tmux-tokyo-night'
+# set -g @theme_variation 'night'
+# set -g @theme_enable_icons 0
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
