--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,7 @@ run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
 # FZF based fuzzy switch session
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 bind j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind C-w display-popup -E "tmux list-windows -F '#I: #W' | fzf --reverse | sed -E 's/:.*$//' | xargs tmux select-window -t"
 
 # bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 # Prompted join-pane
