--- a/tmux/tmux-3.2.conf
+++ b/tmux/tmux-3.2.conf
@@ -1,6 +1,7 @@
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 bind j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
+bind C-w display-popup -E "tmux list-windows -F '#I: #W' | fzf --reverse | sed -E 's/:.*$//' | xargs tmux select-window -t"
 
 bind-key -Tmytable1 p display-popup -E -w 80% -h 80% "python"
 bind-key -Tmytable1 i display-popup -E -w 80% -h 80% "ipython"
